refactor: Began rewrite to 1.20.2